--- a/Flutter/bamtol_market_app/pubspec.yaml
+++ b/Flutter/bamtol_market_app/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.7.2
   material: ^1.0.1
+  flutter_svg: ^2.2.3
+  equatable: ^2.0.7
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +66,9 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - lib/assets/images/logo.jpeg
+    - assets/images/
+  #  - assets/svg
+  #  - assets/svg/icons
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
